# anomap

./: CMakeLists.txt  LICENSE  README.md  anomap.c  anomap.h  main.c
.github/workflows/: cmake-multi-platform.yml
include/: anomap.h
test/: CMakeLists.txt  locks-pthread.c  main.c  ordering.c
